# order-backend

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  dbdiagram.txt  pyproject.toml
order/: asgi.py  settings.py  urls.py  wsgi.py
order/core/: router.py
order/core/management/commands/: populate.py
order/core/migrations/: 0001_add__user.py  0002_add__client.py  0003_add__product.py  0004_add__order__order_items.py
order/core/models/: __init__.py  client.py  order.py  product.py  user.py
order/core/serializers/: __init__.py  product.py
order/core/tests/unit/: test_client_model.py  test_order_model.py  test_product_model.py  test_user_model.py
order/core/tests/unit/serializers/: test_product.py
order/core/views/: __init__.py  product.py
order/resources/: predefined_data.py
