[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["devguerreiro"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
black = "^20.8b1"
isort = "^5.7.0"
pre-commit = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
